--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
 excludes=
 file.reference.TimingFramework-0.55.jar=C:\\Users\\Thinh\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\LapTrinh Java\\Library\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-1=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.TimingFramework-0.55.jar}
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.TimingFramework-0.55.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
