--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DuAn01_G3_ebooks
+application.vendor=Admin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,13 @@ dist.jar=${dist.dir}/DuAn01_G3_ebooks.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
+endorsed.classpath=
 excludes=
-file.reference.TimingFramework-0.55.jar=C:\\Users\\Thinh\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\LapTrinh Java\\Library\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.TimingFramework-0.55.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
