--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.TimingFramework-0.55.jar-1=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.TimingFramework-0.55.jar-1}
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.jcalendar-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
