--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
-file.reference.mssql-jdbc-10.2.1.jre17.jar=C:\\Users\\Admin\\Downloads\\ThuVienJava\\mssql-jdbc-10.2.1.jre17.jar
+file.reference.mssql-jdbc-10.2.1.jre17.jar=mssql-jdbc-10.2.1.jre17.jar
 file.reference.TimingFramework-0.55.jar-1=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
