--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -35,7 +35,6 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
 endorsed.classpath=
 excludes=
-file.reference.jaco-mp3-player-0.9.3.jar=jaco-mp3-player-0.9.3.jar
 file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.mssql-jdbc-10.2.1.jre17.jar=mssql-jdbc-10.2.1.jre17.jar
 file.reference.TimingFramework-0.55.jar-1=TimingFramework-0.55.jar
@@ -45,8 +44,7 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.TimingFramework-0.55.jar-1}:\
     ${file.reference.jcalendar-1.2.2.jar}:\
-    ${file.reference.mssql-jdbc-10.2.1.jre17.jar}:\
-    ${file.reference.jaco-mp3-player-0.9.3.jar}
+    ${file.reference.mssql-jdbc-10.2.1.jre17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,8 +53,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
