--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /DuAn01_G3_ebooks/nbproject/private/
 /DuAn01_G3_ebooks/build/
 /DuAn01_G3_ebooks/dist/
+/DuAn01_G3_ebooks/DuAn01_G3_ebooks/build/
+/DuAn01_G3_ebooks/DuAn01_G3_ebooks/dist/
+/DuAn01_G3_ebooks/DuAn01_G3_ebooks/nbproject/private/
