--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -35,9 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
 endorsed.classpath=
 excludes=
+file.reference.fontbox-1.5.0.jar=fontbox-1.5.0.jar
+file.reference.icepdf-core-4.3.3.jar=icepdf-core-4.3.3.jar
+file.reference.icepdf-core.jar=icepdf-core.jar
+file.reference.icepdf-viewer-4.3.3.jar=icepdf-viewer-4.3.3.jar
+file.reference.icepdf-viewer.jar=icepdf-viewer.jar
 file.reference.jaco-mp3-player-0.9.3.jar=jaco-mp3-player-0.9.3.jar
 file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.mssql-jdbc-10.2.1.jre17.jar=mssql-jdbc-10.2.1.jre17.jar
+file.reference.pdfbox-1.2.0.jar=pdfbox-1.2.0.jar
 file.reference.TimingFramework-0.55.jar-1=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -46,7 +52,13 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar-1}:\
     ${file.reference.jcalendar-1.2.2.jar}:\
     ${file.reference.mssql-jdbc-10.2.1.jre17.jar}:\
-    ${file.reference.jaco-mp3-player-0.9.3.jar}
+    ${file.reference.jaco-mp3-player-0.9.3.jar}:\
+    ${file.reference.fontbox-1.5.0.jar}:\
+    ${file.reference.pdfbox-1.2.0.jar}:\
+    ${file.reference.icepdf-core-4.3.3.jar}:\
+    ${file.reference.icepdf-viewer-4.3.3.jar}:\
+    ${file.reference.icepdf-viewer.jar}:\
+    ${file.reference.icepdf-core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
