--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -37,9 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.fontbox-1.5.0.jar=fontbox-1.5.0.jar
 file.reference.icepdf-core-4.3.3.jar=icepdf-core-4.3.3.jar
-file.reference.icepdf-core.jar=icepdf-core.jar
 file.reference.icepdf-viewer-4.3.3.jar=icepdf-viewer-4.3.3.jar
-file.reference.icepdf-viewer.jar=icepdf-viewer.jar
 file.reference.jaco-mp3-player-0.9.3.jar=jaco-mp3-player-0.9.3.jar
 file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.mssql-jdbc-10.2.1.jre17.jar=mssql-jdbc-10.2.1.jre17.jar
@@ -56,9 +54,7 @@ javac.classpath=\
     ${file.reference.fontbox-1.5.0.jar}:\
     ${file.reference.pdfbox-1.2.0.jar}:\
     ${file.reference.icepdf-core-4.3.3.jar}:\
-    ${file.reference.icepdf-viewer-4.3.3.jar}:\
-    ${file.reference.icepdf-viewer.jar}:\
-    ${file.reference.icepdf-core.jar}
+    ${file.reference.icepdf-viewer-4.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
