--- a/DuAn01_G3_ebooks/nbproject/project.properties
+++ b/DuAn01_G3_ebooks/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn01_G3_ebooks
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=activation.jar
 file.reference.fontbox-1.5.0.jar=fontbox-1.5.0.jar
 file.reference.icepdf-core-6.2.2.jar=icepdf-core-6.2.2.jar
 file.reference.icepdf-viewer-6.2.2.jar=icepdf-viewer-6.2.2.jar
 file.reference.jaco-mp3-player-0.9.3.jar=jaco-mp3-player-0.9.3.jar
+file.reference.javax.mail.jar=javax.mail.jar
 file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.mssql-jdbc-10.2.1.jre17.jar=mssql-jdbc-10.2.1.jre17.jar
 file.reference.pdfbox-1.2.0.jar=pdfbox-1.2.0.jar
@@ -54,7 +56,9 @@ javac.classpath=\
     ${file.reference.fontbox-1.5.0.jar}:\
     ${file.reference.pdfbox-1.2.0.jar}:\
     ${file.reference.icepdf-core-6.2.2.jar}:\
-    ${file.reference.icepdf-viewer-6.2.2.jar}
+    ${file.reference.icepdf-viewer-6.2.2.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
